src/test/deca/context/valid/sansObjet/PrintlnUsageWithInt.deca
{
    int x = 20;
    int y = 2020;
    int z = x+y;
    println(z);
}