src/test/deca/context/invalid/sansObjet/IntAffectationWithBoolean.deca
{
    int x = 2020;
    boolean y = true;
    x = 20 + y;
}